argocd/apps/paperless/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless
  name: paperless
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: paperless
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - image: ghcr.io/paperless-ngx/paperless-ngx:latest@sha256:2a6d9f6461ad7e8335f5b2123a173b9e6002fda209af8a66483b0c00629569ab
          imagePullPolicy: IfNotPresent
          name: paperless
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: export
              mountPath: /usr/src/paperless/export
            - name: consume
              mountPath: /usr/src/paperless/consume
          resources:
            requests:
              cpu: 10m
              memory: 1Gi
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: export
          persistentVolumeClaim:
            claimName: export
        - name: consume
          persistentVolumeClaim:
            claimName: consume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-db
  name: paperless-db
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: paperless-db
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: paperless-db
    spec:
      containers:
        - image: docker.io/library/mariadb:11@sha256:310d29fbb58169dcddb384b0ff138edb081e2773d6e2eceb976b3668089f2f84
          imagePullPolicy: IfNotPresent
          name: paperless-db
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 500Mi
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-redis
  name: paperless-redis
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: paperless-redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      containers:
        - image: docker.io/library/redis:7@sha256:1eeedfa9ae00ad214df5b7cf450313ca244a6bab51994cbd8d7f382d50828986
          imagePullPolicy: IfNotPresent
          name: paperless-redis
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: redis
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 500Mi
      restartPolicy: Always
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
---
