argocd/apps/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless
  name: paperless
spec:
  ports:
    - name: "http"
      port: 8000
      targetPort: 8000
  selector:
    app: paperless
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-db
  name: paperless-db
spec:
  ports:
    - name: "postgres"
      port: 5432
      targetPort: 5432
  selector:
    app: paperless-db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-redis
  name: paperless-redis
spec:
  ports:
    - name: "redis"
      port: 6379
      targetPort: 6379
  selector:
    app: paperless-redis
